--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,6 +9,9 @@ on:
   release:
     types: [created]
 
+env:
+  REPO_NAME: ${{ github.event.repository.name }}
+
 jobs:
   build:
 
@@ -24,8 +27,8 @@ jobs:
       with:
         java-version: '19'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        server-id: $REPO_NAME
+        overwrite-settings: false
 
     - name: Build with Maven
       run: mvn clean -B package --file pom.xml
@@ -34,4 +37,3 @@ jobs:
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
-        REPO_NAME: ${{ github.event.repository.name }}
