--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,6 +8,8 @@ on:
     branches: [main]
   release:
     types: [created]
+  workflow_dispatch:
+    
 
 env:
   REPO_NAME: ${{ github.event.repository.name }}
