--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,15 +4,8 @@
 name: Maven Package
 
 on:
-  push:
-    branches: [main]
   release:
     types: [created]
-  workflow_dispatch:
-    
-
-env:
-  REPO_NAME: ${{ github.event.repository.name }}
 
 jobs:
   build:
@@ -24,16 +17,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
+    - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
+        java-version: '11'
         distribution: 'temurin'
-        server-id: $REPO_NAME
-        overwrite-settings: false
+        server-id: HSCore # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn clean -B package --file pom.xml
+      run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
