--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>hscore</artifactId>
 
     <name>HSCore</name>
-    <version>1.2.4</version>
+    <version>1.2.5b</version>
     <packaging>jar</packaging>
 
     <properties>
